# aergo

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.polaris  Dockerfile.tools  Makefile  README.md  doc.go  glide.yaml  go.mod  go.sum  ignore_protobuf_error.sh  log.diff
.github/: arglog-shorttest.toml
Docker/: Dockerfile.builder  Dockerfile.local  Dockerfile.node  Dockerfile.polaris  Dockerfile.tools  build-local.sh  build.sh
account/: accountservice.go  accountservice_test.go  addresses.go  signer.go
blacklist/: blacklist.go
blockchain/: blockvalidator.go  blockverifier.go  chainanchor.go  chaindb.go  chainhandle.go  chainservice.go  (+13 more)
cmd/aergoscc/: CMakeLists.txt  aergoscc.go
cmd/aergoscc/cmd/: root.go
contract/native/: CMakeLists.txt  Makefile  README.md  Reference.md  TODO  aergoscc.c  array.c  array.h  ascc.c  assert.c  assert.h  ast.c  ast.h  ast_blk.c  ast_blk.h  ast_exp.c  ast_exp.h  ast_func.c  ast_func.h  ast_id.c  ast_id.h  ast_imp.c  ast_imp.h  ast_meta.c  ast_meta.h  ast_stmt.c  ast_stmt.h  ast_struct.c  ast_struct.h  ast_type.c  ast_type.h  ast_val.h  ast_var.c  ast_var.h  check.c  check.h  check_blk.c  check_blk.h  check_exp.c  check_exp.h  (+134 more)
contract/native/tests/: 001_contract_decl  002_comments  003_variable  004_literal  005_expression  006_statement  007_constructor  007_function  008_constructor  008_function  009_interface  009_preprocess  010_preprocess  CMakeLists.txt  Makefile  ascl_test.c  case_scan_normal_comment  case_scan_unknown_char  case_scan_unterminated_comment  compile_test.c  compiler_test.c  make-tests.sh  parser_test.c  tc_parser_comment  tc_parser_contract_decl  tc_parser_var_decl  tc_parser_variable_decl  test_parser.c
contract/native/tests/parser/: 001_contract_decl  002_comments  003_variable_decl  004_literal  005_expression  006_statement  007_function  008_constructor
libtool/: .gitignore  CMakeLists.txt  Makefile  gmp-6.1.2.patch  gmp-6.2.1.patch  gmp-6.3.0.patch
libtool/download/: gmp-6.2.1.tar.bz2  gmp-6.3.0-aergo.tar.bz2  gmp-6.3.0.tar.bz2
libtool/src/bison-3.0.5/: ChangeLog  Makefile.in  aclocal.m4  configure
libtool/src/bison-3.0.5/build-aux/: gnupload
libtool/src/bison-3.0.5/doc/: bison.1  bison.help  bison.info  version.texi
libtool/src/bison-3.0.5/doc/figs/: example-reduce.eps  example-shift.eps  example.eps
libtool/src/bison-3.0.5/lib/: alignof.h  config.in.h  fprintf.c  gnulib.mk  localcharset.c  obstack.c  obstack.h  obstack_printf.c  printf.c  sprintf.c  sys_types.in.h  unistd.in.h  vfprintf.c  vsnprintf.c  vsprintf.c
libtool/src/bison-3.0.5/m4/: gnulib-comp.m4  m4.m4
libtool/src/bison-3.0.5/po/: LINGUAS  bison.pot  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  hr.gmo  hr.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ms.gmo  ms.po  nb.gmo  nb.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  (+20 more)
libtool/src/bison-3.0.5/runtime-po/: LINGUAS  ast.gmo  ast.po  bison-runtime.pot  ca.gmo  ca.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  ia.gmo  ia.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ky.gmo  ky.po  (+40 more)
libtool/src/bison-3.0.5/src/: scan-code.c  scan-gram.c  scan-skel.c
libtool/src/bison-3.0.5/tests/: package.m4
libtool/src/gmp-6.1.2/: Makefile.am  Makefile.in
libtool/src/m4-1.4.18/: ChangeLog  ChangeLog-2014  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  bootstrap  c-boxes.el  cfg.mk  configure  configure.ac
libtool/src/m4-1.4.18/build-aux/: gnupload
libtool/src/m4-1.4.18/checks/: 001.preprocess  002.debugging_  003.command_li  004.command_li  005.command_li  006.command_li  007.command_li  008.comments  009.comments  010.input_proc  011.input_proc  012.inhibiting  013.inhibiting  014.inhibiting  015.inhibiting  016.inhibiting  017.inhibiting  018.inhibiting  019.inhibiting  020.macro_argu  021.macro_argu  022.macro_argu  023.macro_argu  024.macro_argu  025.quoting_ar  026.macro_expa  027.macro_expa  028.define  029.define  030.define  031.arguments  032.arguments  033.arguments  034.arguments  035.arguments  036.arguments  037.pseudo_arg  038.pseudo_arg  039.pseudo_arg  040.pseudo_arg  (+201 more)
libtool/src/m4-1.4.18/doc/: Makefile.am  Makefile.in  m4.1  m4.info  m4.info-1  m4.info-2  m4.texi  version.texi
libtool/src/m4-1.4.18/examples/: Makefile.am  Makefile.in  esyscmd.m4  file.m4  hanoi.m4  patsubst.m4
libtool/src/m4-1.4.18/lib/: Makefile.am  Makefile.in  config.hin  fseeko.c  gnulib.mk  localcharset.c  obstack.c  regex_internal.h  stdint.in.h  stdio.in.h  strstr.c  unistd.in.h  wchar.in.h  wctype.in.h
libtool/src/m4-1.4.18/m4/: gnulib-cache.m4  gnulib-comp.m4
libtool/src/m4-1.4.18/src/: Makefile.am  Makefile.in  path.c
libtool/src/m4-1.4.18/tests/: Makefile.am  Makefile.in  gnulib.mk  link.c  localename.c
libtool/src/mpfr-4.0.2/: Makefile.in  aclocal.m4  configure  ltmain.sh
libtool/src/mpfr-4.0.2/doc/: Makefile.am  Makefile.in  README.dev  check-typography  mpfr.texi
libtool/src/mpfr-4.0.2/m4/: libtool.m4
libtool/src/mpfr-4.0.2/src/: Makefile.in  mparam_h.in
libtool/src/mpfr-4.0.2/tests/: Makefile.am  Makefile.in  cmp_str.c  memory.c  mpf_compat.c  mpf_compat.h  mpfr-test.h  mpfr_compat.c  random2.c  reuse.c  rnd_mode.c  tabort_defalloc1.c  tabort_defalloc2.c  tabort_prec_max.c  tabs.c  tacos.c  tacosh.c  tadd.c  tadd1sp.c  tadd_d.c  tadd_ui.c  tagm.c  tai.c  talloc-cache.c  talloc.c  tasin.c  tasinh.c  tassert.c  tatan.c  tatanh.c  taway.c  tbeta.c  tbuildopt.c  tcan_round.c  tcbrt.c  tcheck.c  tcmp.c  tcmp2.c  tcmp_d.c  tcmp_ld.c  (+151 more)
libtool/src/mpfr-4.0.2/tools/: ck-clz_tab  ck-copyright-notice  ck-news  ck-version-info  get_patches.sh
libtool/src/mpfr-4.0.2/tools/bench/: Makefile.am  Makefile.in  benchtime.h  mpfrbench.c
libtool/src/mpfr-4.0.2/tune/: Makefile.am  Makefile.in  bidimensional_sample.c  speed.c  tuneup.c
(+1508 files in other folders)
